# Electronic-appliance-System

./: .gitignore  README.md  TODO.txt  docker-compose.yml  pyproject.toml  requirements.txt
management/: settings.py  urls.py
products/: models.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_alter_product_durability.py  0003_alter_product_name.py
products/templates/: base.html  form.html  home.html  update.html
